main: update sample-utreexo.conf
Since the rpcserver will be active even if the rpcuser and rpcpass are
not set, we update the documentation in the sample-utreexo.conf as well.

--- a/sample-utreexod.conf
+++ b/sample-utreexod.conf
@@ -173,15 +173,11 @@
 ; ------------------------------------------------------------------------------
 ; RPC server options - The following options control the built-in RPC server
 ; which is used to control and query information from a running btcd process.
-;
-; NOTE: The RPC server is disabled by default if rpcuser AND rpcpass, or
-; rpclimituser AND rpclimitpass, are not specified.
 ; ------------------------------------------------------------------------------
 
 ; Secure the RPC API by specifying the username and password.  You can also
-; specify a limited username and password.  You must specify at least one
-; full set of credentials - limited or admin - or the RPC server will
-; be disabled.
+; specify a limited username and password.  Don't specify rpcuser or the rpcpass
+; to use cookie based authentication.
 ; rpcuser=whatever_admin_username_you_want
 ; rpcpass=
 ; rpclimituser=whatever_limited_username_you_want
@@ -227,9 +223,7 @@
 ; interoperability issues need to be worked around
 ; rpcquirks=1
 
-; Use the following setting to disable the RPC server even if the rpcuser and
-; rpcpass are specified above.  This allows one to quickly disable the RPC
-; server without having to remove credentials from the config file.
+; Use the following setting to disable the RPC server.
 ; norpc=1
 
 ; Use the following setting to disable TLS for the RPC server.  NOTE: This
