bdkwallet: update bdk to bdk_wallet v2.1.0
The old bdk library is now deprecated and thus we bump to bdk_wallet
v2.1.0.

--- a/bdkwallet/bdkgo_crate/Cargo.toml
+++ b/bdkwallet/bdkgo_crate/Cargo.toml
@@ -9,15 +9,15 @@ crate-type = ["staticlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uniffi = "=0.25.0"
+uniffi = "=0.28.3"
 weedle2 = "=4.0.0"
 thiserror = "1.0"
 bincode = "1"
 serde = { version = "1", features = ["derive"] }
-bdk = { git = "https://github.com/bitcoindevkit/bdk.git", rev = "070fffb95cddb9153f326d5662f206d25ecbcc7c", features = ["keys-bip39"] }
-bdk_file_store = { git = "https://github.com/bitcoindevkit/bdk.git", rev = "070fffb95cddb9153f326d5662f206d25ecbcc7c" }
+bdk_wallet = { version = "2.1.0", features = ["rusqlite", "keys-bip39"] }
+bdk_chain = "=0.23.1"
 rand = "0.8.5"
 
 [build-dependencies]
-uniffi = { version = "=0.25.0", features = [ "build" ] }
+uniffi = { version = "=0.28.3", features = [ "build" ] }
 weedle2 = "=4.0.0"
